# ai-engineering-m4

./: apt.txt  data.yaml  pyproject.toml  requirements.txt
.streamlit/: config.toml
labels_weight/: IMG_20240513_145232_jpg.rf.c55f3cd23d291ea505fe962e17f6046c.txt  IMG_20240513_145236_jpg.rf.e9728ced98aa14e26a2ebdbd83e666b8.txt  IMG_20240513_145242_jpg.rf.5bd6dbd71fa25070ad8907996fdf088a.txt  IMG_20240513_145251_jpg.rf.9b8a37cc383b3e1f848d81968e18153d.txt  IMG_20240517_153810_jpg.rf.093e0c2b4feba8a0dfae0843d5c75d56.txt  IMG_20240517_162433_jpg.rf.40422cd92572845ee9448142f4884322.txt  IMG_20240522_163135_jpg.rf.95181ab24696b6d171e6b295e9178d28.txt  IMG_20240522_163153_jpg.rf.5fada1ab3996594f1dace6fd36b0e4ce.txt  IMG_20240522_163155_jpg.rf.b6f66cbc941c692f992690f49fee50dd.txt  IMG_20240522_163211_jpg.rf.1760fb5a8f4e75b7725a48eaae4f4a1d.txt  IMG_20240524_143101_jpg.rf.8f3096221daeddbd05a7bd422946da2d.txt  IMG_20240524_143108_jpg.rf.cf739f5f306bebff9fdd8c4e0b64a3f6.txt  IMG_20240524_143124_jpg.rf.7e3f72a9c70d067252874452e0e060b8.txt  IMG_5595_JPG.rf.96d1604ee4b63c34208a790f8e3389a7.txt  IMG_5598_JPG.rf.e1310b6a4fbe625ba2e03ab5b1ab0ae4.txt  IMG_5600_JPG.rf.a3c28759f5946a200b70f935b60538ed.txt  IMG_5601_JPG.rf.7e3e505d98ca64c98fa82dbf5f1c48f2.txt  IMG_5602_JPG.rf.beb4284a3c78a5d24c19379f0509859e.txt  IMG_5603_JPG.rf.0f3550fe29714e696dbb701559763b5b.txt  IMG_5604_JPG.rf.82baf65bbb45b7b052321052e3a201ce.txt  IMG_5605_JPG.rf.5c82a31a697bdd295b095781011cd7c5.txt  IMG_5606_JPG.rf.ce8ab6f3bca087403d6500bdc9a5f006.txt  IMG_5607_JPG.rf.b19dd593259a52d0cc04759662e81def.txt  (+1320 more)
(+2 files in other folders)
